implemented color change option

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
             
             </div>
             <div id="toolbar">
-                <div class="knob" id="left-knob"><p>Reset/ Resize</p></div>
+                <div class="knob" id="left-knob">Reset</div>
                 <div><h1>Etch-a-Sketch</h1></div>
-                <div class="knob drawn-black" id="right-knob">Rainbow</div>
+                <div data-color="black" class="knob black" id="right-knob">Rainbow</div>
             </div>
         </div>
     </body>
